--- a/emotesAssets/src/main/resources/assets/emotecraft/lang/en_US.json
+++ b/emotesAssets/src/main/resources/assets/emotecraft/lang/en_US.json
@@ -69,5 +69,6 @@
   "emotecraft.export.done.json": "JSON export done!",
   "emotecraft.export.done.emotecraft": ".emotecraft export done!",
   "emotecraft.song_too_big_to_send": "Song is too big to be sent to server. Sending emote only...",
-  "emotecraft.cant.override.forced": "You're forced to play the current emote, it can't be changed."
+  "emotecraft.cant.override.forced": "You're forced to play the current emote, it can't be changed.",
+  "emotecraft.search": "Search.."
 }
